--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,7 +23,7 @@
 /* Estilos para el fondo azul */
 body {
     font-family: Arial, sans-serif;
-    background-color: #00BFFF; /* Azul */
+    background-color: #f0f0f0; /* Azul */
 /*    background-image: url('../imagenes/logo-duoc.png'); /* Ruta de la imagen del logo */
 
 .header {
